--- a/Programmania/wwwroot/css/Main.css
+++ b/Programmania/wwwroot/css/Main.css
@@ -133,7 +133,7 @@ a {
 }
 
 .header__title {
-    font-size: 5vh;
+    font-size: 4em;
     margin: 0;
     text-align: center;
     width: 100%;
@@ -248,7 +248,7 @@ a {
 
     .left-menu-content li {
         margin-top: 30px;
-        font-size: 2.5vh;
+        font-size: 1.7em;
         font-family: "monsterrat-light";
     }
 
@@ -259,7 +259,7 @@ a {
 
             .left-menu-content li a:hover {
                 color: #0083ab !important;
-                font-size: 3vh;
+                font-size: 1.3em;
             }
 
 .arrow {
@@ -289,7 +289,7 @@ a {
 
 .container__title {
     text-align: center;
-    font-size: 4vh;
+    font-size: 2.8em;
     font-weight: 700;
     font-family: "monsterrat-thin";
 }
@@ -323,7 +323,7 @@ a {
 .current-course__title,
 .course__title {
     text-align: center;
-    font-size: 3vh;
+    font-size: 1.8em;
     font-family: "monsterrat-bold";
     margin-top: 10px;
 }
@@ -331,7 +331,7 @@ a {
 .current-course__info,
 .course__info {
     text-align: center;
-    font-size: 2.5vh;
+    font-size: 1.5em;
     font-family: "monsterrat-light";
 }
 
@@ -354,15 +354,16 @@ a {
 
     .current-course__percent .ldBar-label,
     .course__percent .ldBar-label {
-        font-size: 3vh;
+        font-size: 2em;
         color: #66a8ff;
     }
 
 .current-course__button {
+    font-family: monsterrat-light;
     min-height: 20px;
     width: 500px;
     padding: 20px;
-    font-size: 2.5vh;
+    font-size: 1.8em;
     margin-top: 30px;
     border-radius: 20px;
     transition: all 0.5s ease 0s !important;
@@ -432,12 +433,13 @@ a {
 
 
 .course__button {
+    font-family: monsterrat-light;
     width: auto;
     min-height: 20px;
     padding: 20px;
     background-color: #66a8ff;
     color: #fff;
-    font-size: 2.5vh;
+    font-size: 1.8em;
     margin-top: 30px;
     border-radius: 20px;
     transition: all 0.5s ease 0s;
@@ -461,7 +463,7 @@ a {
 
 .level__title {
     margin-top: 50px;
-    font-size: 4vh;
+    font-size: 2.8em;
     font-family: "monsterrat-bold";
     color: #00c738;
 }
@@ -482,13 +484,13 @@ a {
     }
 
     .level__percent .ldBar-label {
-        font-size: 3vh;
+        font-size: 1.8em;
         font-family: "monsterrat-light";
         color: #00c738;
     }
 
 .level__info {
-    font-size: 2.5vh;
+    font-size: 1.7em;
     color: #00c738;
     font-family: "monsterrat-light";
     margin-top: 100px;
@@ -497,7 +499,7 @@ a {
 .level__xp {
     color: #00c738;
     font-family: "monsterrat-light";
-    font-size: 2.5vh;
+    font-size: 1.7em;
     text-align: center;
     margin-top: 30px;
 }
@@ -548,13 +550,13 @@ a {
 
     .winrate__percent .ldBar-label {
         color: #ff4f4f;
-        font-size: 3vh;
+        font-size: 2em;
         font-family: "monsterrat-normal";
     }
 
 .winrate__info {    
     color: #ff4f4f;
-    font-size: 4vh;
+    font-size: 2.8em;
     margin-top: 70px;
     text-align: center;
 }
@@ -618,7 +620,7 @@ a {
     text-align: center;
     color: #002c8a;
     font-family: "monsterrat-normal";
-    font-size: 3vh;
+    font-size: 2em;
 }
 
 .challenge__info {
@@ -634,7 +636,7 @@ a {
     width: auto;
     transition: all 0.5s ease 0s;
     font-family: "monsterrat-light";
-    font-size: 3vh;
+    font-size: 2em;
     padding: 20px;
     text-align: center;
 }
@@ -679,7 +681,7 @@ a {
     margin-top: 30px;
     text-align: center;
     font-family: "monsterrat-bold";
-    font-size: 3vh;
+    font-size: 2em;
     color: #ff9147;
 }
 
@@ -687,7 +689,7 @@ a {
     margin-top: 30px;
     text-align: center;
     font-family: "monsterrat-normal";
-    font-size: 2.5vh;
+    font-size: 1.5em;
     color: #ff9147;
 }
 
@@ -708,7 +710,7 @@ a {
     .achievment__percent .ldBar-label {
         color: #ff9147;
         font-family: "monsterrat-light";
-        font-size: 3vh;
+        font-size: 2em;
     }
 
 .news-container {
@@ -745,7 +747,7 @@ a {
 .news-el-header__text {
     color: #530091;
     font-family: "monsterrat-bold";
-    font-size: 3vh;
+    font-size: 1.8em;
 }
 
 .news-el-header__avatar {
@@ -763,13 +765,13 @@ a {
 .news__content {
     font-family: "monsterrat-thin";
     color: #530091;
-    font-size: 2.5vh;
+    font-size: 1.5em;
 }
 
 .news__date {
     font-family: "monsterrat-thin";
     color: #530091;
-    font-size: 2.3vh;
+    font-size: 1.3em;
 }
 
 .news__button {
@@ -781,7 +783,7 @@ a {
     color: #fff;
     transition: all 0.5s ease 0s;
     font-family: "monsterrat-normal";
-    font-size: 3vh;
+    font-size: 2em;
     text-align: center;
 }
 
@@ -873,7 +875,7 @@ a {
 .dev-text{
     text-align: center;
     font-family: "monsterrat-bold";
-    font-size: 5vh;
+    font-size: 4em;
     margin-top: 50px;
 }
 
