--- a/Programmania/wwwroot/css/Profile.css
+++ b/Programmania/wwwroot/css/Profile.css
@@ -93,22 +93,22 @@ h6 {
 
 @font-face {
     font-family: monsterrat-thin;
-    src: url("fonts/Montserrat-Thin.ttf");
+    src: url("../fonts/Montserrat-Thin.ttf");
 }
 
 @font-face {
     font-family: monsterrat-light;
-    src: url("fonts/Montserrat-Light.ttf");
+    src: url("../fonts/Montserrat-Light.ttf");
 }
 
 @font-face {
     font-family: monsterrat-normal;
-    src: url("fonts/Montserrat-Regular.ttf");
+    src: url("../fonts/Montserrat-Regular.ttf");
 }
 
 @font-face {
     font-family: monsterrat-bold;
-    src: url("fonts/Montserrat-Bold.ttf");
+    src: url("../fonts/Montserrat-Bold.ttf");
 }
 
 hr {
@@ -165,18 +165,18 @@ hr {
 
     .profile-info__item h3 {
         font-family: "monsterrat-normal";
-        font-size: 2.5vh;
+        font-size: 1.8em;
     }
 
     .profile-info__item p {
         font-family: "monsterrat-light";
-        font-size: 2vh;
+        font-size: 1.4em;
         text-align: justify;
     }
 
 .profile-info__change {
     width: 100%;
-    font-size: 2vh !important;
+    font-size: 1.4em !important;
     font-family: "monsterrat-normal" !important;
     border-radius: 20px !important;
 }
@@ -200,7 +200,7 @@ hr {
 .tab {
     overflow: hidden;
     background-color: #ceecff;
-    font-size: 2vh;
+    font-size: 1.4em;
     font-family: "monsterrat-light";
 }
 
@@ -257,13 +257,13 @@ hr {
 
 .ldBar-label {
     color: #64bcff;
-    font-size: 2.5vh;
+    font-size: 1.8em;
     font-family: "monsterrat-normal";
 }
 
 .level__content {
     color: #64bcff;
-    font-size: 4vh;
+    font-size: 2.5em;
     font-family: "monsterrat-bold";
 }
 
@@ -323,6 +323,6 @@ hr {
 
 @media (max-width: 430px) {
     .profile__name {
-        font-size: 3.5vh;
+        font-size: 2.2em;
     }
 }
